# agent-starter-python

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.dev  Dockerfile.tts  FORME.md  README.md  docker-compose.yaml  litellm_config.yaml  livekit.toml  pyproject.toml  taskfile.yaml
.github/workflows/: ruff.yml  tests.yml
chatter/: config.yaml
coqui-tts/: models.env.example  requirements.txt  tts_server.py
evals/: test_agent.py
src/: agent.py  agent.py.back
src/plugins/: __init__.py  chatter_tts.py  coqui_tts.py  factory.py  ollama_llm.py  whisper_stt.py
